# THU-IAI-2025

./: README.md
connect4/: README.md  report.typ
connect4/tako/: .gitlab-ci.yml  Cargo.toml  README.md
connect4/tako/src/: clib.rs  game.rs  lib.rs  main.rs
pinyin/: Makefile  README.md  README.typ  report.bib  report.typ
pinyin/data/: output.txt
pinyin/include/: aho_corasick.hpp  common.hpp  corpus.hpp  encoding.hpp  tables.hpp  utils.hpp
pinyin/include/ime/: bigram.hpp  ime.hpp  word.hpp  word_tri.hpp
pinyin/src/: bigram_ime.cpp  corpus.cpp  encoding.cpp  main.cpp  main_word.cpp  main_word_tri.cpp  tables.cpp  test_aho_corasick.cpp  utils.cpp  word_ime.cpp  word_tri_ime.cpp
sentiment/: README.md  config.py  dataset.py  eval-and-plot.py  eval.py  report.typ  requirements.txt  train.py
sentiment/model/: __init__.py  cnn.py  mlp.py  rnn.py
